--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,10 @@ body {
     background-color: aliceblue;
 }
 
-@media screen and (min-device-width : 480px) {
+@media screen and (min-device-width : 280px) {
     main {
         height: 100vh;
+        background-color: rgba(255, 255, 255, 0.95);
     }
 }
 
@@ -39,6 +40,7 @@ body {
 
     main {
         width: 50rem;
+        background-color: white;
         margin-top: 50px;
         border-radius: 10px;
         height: 100%;
